# threshold_ecdsa_423

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/tecdsa_practice423_backend/: Cargo.toml  tecdsa_practice423_backend.did
src/tecdsa_practice423_backend/src/: lib.rs
src/tecdsa_practice423_frontend/assets/: main.css
src/tecdsa_practice423_frontend/src/: index.html  index.js
