[package]
name = "tecdsa_practice423_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
candid = "0.8.4"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.0"
hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }